[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["Daniel Makhanek <daniel.makhanek@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
pyright = "^1.1.381"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
